fixed profile spacing

--- a/style.css
+++ b/style.css
@@ -346,6 +346,7 @@ video {
 #Contacts {
   display: flex;
   flex-flow: row wrap;
+  justify-content: space-between;
 }
 
 .Contact {
